--- a/public/styles.css
+++ b/public/styles.css
@@ -9,7 +9,8 @@ p {
 }
 
 .icon {
-  color: #019090;
+  color: #3C8D8A;
+  /* color: #019090; */
 }
 
 /* navigation */
@@ -81,6 +82,9 @@ nav {
 
 }
 
+/************************************************************
+homepage
+*************************************************************/
 
 /* introduction-section */
 
@@ -97,6 +101,71 @@ line-height: 1.7;
 }
 
 
+.mid {
+  text-align: center;
+  color: white;
+  padding: 10% 15%;
+}
+.mid-heading {
+  font-weight: bolder;
+  font-size: 2.9rem;
+}
+
+.mid-body {
+    padding-top: 1%;
+    font-size: 1.2rem;
+    font-weight: normal;
+}
+
+@media screen and (max-width: 578px) {
+
+  .mid {
+    padding: 20% 0;
+  }
+
+  .mid-heading {
+    font-weight: bolder;
+    font-size: 2rem;
+  }
+
+  .mid-body {
+    padding: 0 10%;
+    font-size: 0.9rem;
+  }
+
+}
+
+/* ministry section */
+.ministry {
+  padding: 10% 6%;
+  color: #3C8D8A;
+}
+
+.ministry-heading {
+  font-weight: bolder;
+  font-size: 2rem;
+}
+
+
+/* beliefs section */
+
+.beliefs {
+  padding: 10% 6%;
+  background-color: #3C8D8A;
+}
+
+.beliefs-heading {
+  font-weight: bolder;
+  font-size: 2rem;
+}
+
+
+
+/* events section */
+
+.events {
+  padding: 10% 15%;
+}
 
 
 /* contact section */
@@ -128,7 +197,7 @@ line-height: 1.7;
 }
 
 .mission-body {
-  
+
 }
 /* footer secction */
 
